--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,125 @@
-.App {
-  text-align: center;
+.nav_bar {
+  display: flex;
+  flex-direction: row;
+  background-color: #0a0b0a;
+  /* padding: 15px; */
+  margin: 0;
+  /* float: left; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav ul li {
+  list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav_item {
+  color: white;
+  padding: 15px;
+  text-decoration: none;
+}
+nav ul li a.active {
+  background-color: #303631;
+  padding: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav ul li a:hover {
+  background-color: #3b413c;
+  padding: 15px;
+}
+
+#form_container {
+  width: 90%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  align-content: space-between;
+  /* flex-wrap: wrap; */
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+form {
+  width: 160px;
+  /* text-align: center; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.img_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  float: left;
+}
+
+.img_item {
+  width: 300px;
+  height: 200px;
+  padding: 10px;
+}
+
+#btt_btn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+.vid_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.vid_item {
+  width: 310px;
+  height: 250px;
+  padding: 10px;
+  border: none;
+}
+.overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+
+.ol_item {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  max-height: 80%;
+  max-width: 80%;
+  transform: translate(-50%, -50%);
+}
+
+table,
+th,
+td {
+  border: 1px solid #333;
+  border-collapse: collapse;
+  padding: 10px;
+}
+
+th {
+  text-align: left;
+}
+
+@media (max-width: 360px) {
+  nav ul {
+    padding: 10px;
+    font-size: 12px;
   }
-  to {
-    transform: rotate(360deg);
+  nav ul li a,
+  nav ul li a.active,
+  nav ul li a:hover {
+    padding: 10px;
   }
 }
