--- a/src/App.css
+++ b/src/App.css
@@ -7,22 +7,23 @@
   /* float: left; */
 }
 
-nav ul li {
+/* nav ul li {
   list-style: none;
-}
+} */
 
 .nav_item {
   color: white;
   padding: 15px;
   text-decoration: none;
 }
-nav ul li a.active {
+/* nav ul li a.active {
   background-color: #303631;
   padding: 15px;
-}
+} */
 
-nav ul li a:hover {
-  background-color: #3b413c;
+.nav_item:hover {
+  /* background-color: #3b413c; */
+  color: #a5a58d;
   padding: 15px;
 }
 
